sandbox-codebase/objects/mone__Mailchimp_List__c/mone__Mailchimp_List__c.object-meta.xml
<CustomObject>
    <description>Your Mailchimp list, also known as your audience, is where you store and manage all of your contacts.</description>
    <label>Mailchimp List</label>
    <nameField>
        <displayFormat>ML-{0000}</displayFormat>
        <label>Mailchimp List</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Mailchimp Audience</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>