sandbox-codebase/objects/mone__Mailchimp_List__c/fields/mone__Beamer_Address__c.field-meta.xml
<CustomField>
    <fullName>mone__Beamer_Address__c</fullName>
    <inlineHelpText>The list&apos;s Email Beamer address. The Email Beamer feature allows you to send an email to this address to convert the text and images in the message into a draft email campaign in your Mailchimp account.</inlineHelpText>
    <label>Beamer Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>