sandbox-codebase/objects/mone__Mailchimp_List__c/fields/mone__Campaign_Defaults_From_Email__c.field-meta.xml
<CustomField>
    <fullName>mone__Campaign_Defaults_From_Email__c</fullName>
    <inlineHelpText>Default from name for the Campaign.</inlineHelpText>
    <label>Campaign Defaults From Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>