sandbox-codebase/objects/mone__Mailchimp_List__c/fields/mone__Campaign_Defaults_From_Name__c.field-meta.xml
<CustomField>
    <fullName>mone__Campaign_Defaults_From_Name__c</fullName>
    <inlineHelpText>Campaign default from name.</inlineHelpText>
    <label>Campaign Defaults From Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>