sandbox-codebase/objects/mone__Mailchimp_List__c/fields/mone__Campaign_Defaults_Language__c.field-meta.xml
<CustomField>
    <fullName>mone__Campaign_Defaults_Language__c</fullName>
    <label>Campaign Defaults Language</label>
    <length>255</length>
    <type>Text</type>
</CustomField>