sandbox-codebase/objects/mone__Mailchimp_List__c/fields/mone__Contact_Address2__c.field-meta.xml
<CustomField>
    <fullName>mone__Contact_Address2__c</fullName>
    <label>Contact Address2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>