sandbox-codebase/objects/mone__Mailchimp_List__c/fields/mone__Contact_Zip__c.field-meta.xml
<CustomField>
    <fullName>mone__Contact_Zip__c</fullName>
    <label>Contact Zip</label>
    <length>255</length>
    <type>Text</type>
</CustomField>