sandbox-codebase/objects/mone__Mailchimp_List__c/fields/mone__Date_Created__c.field-meta.xml
<CustomField>
    <fullName>mone__Date_Created__c</fullName>
    <label>Date Created</label>
    <type>DateTime</type>
</CustomField>