sandbox-codebase/objects/mone__Mailchimp_List__c/fields/mone__Double_Optin__c.field-meta.xml
<CustomField>
    <fullName>mone__Double_Optin__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Double Optin</label>
    <type>Checkbox</type>
</CustomField>