sandbox-codebase/objects/mone__Mailchimp_List__c/fields/mone__Email_Type_Option__c.field-meta.xml
<CustomField>
    <fullName>mone__Email_Type_Option__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Email Type Option</label>
    <type>Checkbox</type>
</CustomField>