sandbox-codebase/objects/mone__Mailchimp_List__c/fields/mone__Has_Welcome__c.field-meta.xml
<CustomField>
    <fullName>mone__Has_Welcome__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Welcome</label>
    <type>Checkbox</type>
</CustomField>