sandbox-codebase/objects/mone__Mailchimp_List__c/fields/mone__Last_Synced_Audience__c.field-meta.xml
<CustomField>
    <fullName>mone__Last_Synced_Audience__c</fullName>
    <inlineHelpText>Date and time the audience records were last synced for this list.</inlineHelpText>
    <label>Last Synced Audience</label>
    <type>DateTime</type>
</CustomField>