sandbox-codebase/objects/mone__Mailchimp_List__c/fields/mone__Last_Synced_List__c.field-meta.xml
<CustomField>
    <fullName>mone__Last_Synced_List__c</fullName>
    <label>Last Synced List</label>
    <type>DateTime</type>
</CustomField>