sandbox-codebase/objects/mone__Mailchimp_List__c/fields/mone__List_Id__c.field-meta.xml
<CustomField>
    <fullName>mone__List_Id__c</fullName>
    <externalId>true</externalId>
    <inlineHelpText>A string that uniquely identifies this Mailchimp list. E.g. 4d35e82387</inlineHelpText>
    <label>List Id</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>