sandbox-codebase/objects/mone__Mailchimp_List__c/fields/mone__List_Rating__c.field-meta.xml
<CustomField>
    <fullName>mone__List_Rating__c</fullName>
    <label>List Rating</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>