sandbox-codebase/objects/mone__Mailchimp_List__c/fields/mone__Mailchimp_Account__c.field-meta.xml
<CustomField>
    <fullName>mone__Mailchimp_Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <inlineHelpText>Lookup to the Mailchimp Account for this list.</inlineHelpText>
    <label>Mailchimp Account</label>
    <referenceTo>mone__Mailchimp_Account__c</referenceTo>
    <relationshipLabel>Mailchimp Audiences</relationshipLabel>
    <relationshipName>Mailchimp_Lists</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>