sandbox-codebase/objects/mone__Mailchimp_List__c/fields/mone__Mappings_Mailchimp__c.field-meta.xml
<CustomField>
    <fullName>mone__Mappings_Mailchimp__c</fullName>
    <description>Internal. Stores JSON object of mappings from Salesforce to Mailchimp.</description>
    <label>Mappings Mailchimp</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>