sandbox-codebase/objects/mone__Mailchimp_List__c/fields/mone__Mappings_Salesforce__c.field-meta.xml
<CustomField>
    <fullName>mone__Mappings_Salesforce__c</fullName>
    <description>Internal. Holds JSON object containing mapping details from Mailchimp to Salesforce.</description>
    <label>Mappings Salesforce</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>