sandbox-codebase/objects/mone__Mailchimp_List__c/fields/mone__Marketing_Permissions__c.field-meta.xml
<CustomField>
    <fullName>mone__Marketing_Permissions__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Marketing Permissions</label>
    <type>Checkbox</type>
</CustomField>