sandbox-codebase/objects/mone__Mailchimp_List__c/fields/mone__Name__c.field-meta.xml
<CustomField>
    <fullName>mone__Name__c</fullName>
    <label>Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>