sandbox-codebase/objects/mone__Mailchimp_List__c/fields/mone__Notify_On_Subscribe__c.field-meta.xml
<CustomField>
    <fullName>mone__Notify_On_Subscribe__c</fullName>
    <inlineHelpText>Email address that will receive notifications when subscribers join this audience/list.</inlineHelpText>
    <label>Notify On Subscribe</label>
    <length>255</length>
    <type>Text</type>
</CustomField>