sandbox-codebase/objects/mone__Mailchimp_List__c/fields/mone__Permission_Reminder__c.field-meta.xml
<CustomField>
    <fullName>mone__Permission_Reminder__c</fullName>
    <inlineHelpText>Text is presented to the user as to why they are receiving the email. E.g. &quot;You are receiving this email because you opted in via our website.&quot;</inlineHelpText>
    <label>Permission Reminder</label>
    <type>TextArea</type>
</CustomField>