sandbox-codebase/objects/mone__Mailchimp_List__c/fields/mone__Stats_Avg_Sub_Rate__c.field-meta.xml
<CustomField>
    <fullName>mone__Stats_Avg_Sub_Rate__c</fullName>
    <label>Stats Avg Sub Rate</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>