sandbox-codebase/objects/mone__Mailchimp_List__c/fields/mone__Stats_Campaign_Last_Sent__c.field-meta.xml
<CustomField>
    <fullName>mone__Stats_Campaign_Last_Sent__c</fullName>
    <label>Stats Campaign Last Sent</label>
    <type>DateTime</type>
</CustomField>