sandbox-codebase/objects/mone__Mailchimp_List__c/fields/mone__Stats_Last_Sub_Date__c.field-meta.xml
<CustomField>
    <fullName>mone__Stats_Last_Sub_Date__c</fullName>
    <label>Stats Last Sub Date</label>
    <type>DateTime</type>
</CustomField>