sandbox-codebase/objects/mone__Mailchimp_List__c/fields/mone__Stats_Member_Count_Since_Send__c.field-meta.xml
<CustomField>
    <fullName>mone__Stats_Member_Count_Since_Send__c</fullName>
    <label>Stats Member Count Since Send</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>