sandbox-codebase/objects/mone__Mailchimp_List__c/fields/mone__Stats_Total_Contacts__c.field-meta.xml
<CustomField>
    <fullName>mone__Stats_Total_Contacts__c</fullName>
    <label>Stats Total Contacts</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>