sandbox-codebase/objects/mone__Mailchimp_List__c/fields/mone__Status__c.field-meta.xml
<CustomField>
    <fullName>mone__Status__c</fullName>
    <defaultValue>&quot;Active&quot;</defaultValue>
    <inlineHelpText>This field determines the status of the list in Salesforce. It&apos;s primarily used when deleting a list.</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Deleting</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>