sandbox-codebase/objects/mone__Mailchimp_List__c/fields/mone__Subscribe_Url_Short__c.field-meta.xml
<CustomField>
    <fullName>mone__Subscribe_Url_Short__c</fullName>
    <label>Subscribe Url Short</label>
    <length>255</length>
    <type>Text</type>
</CustomField>