sandbox-codebase/objects/mone__Mailchimp_List__c/fields/mone__Use_Archive_Bar__c.field-meta.xml
<CustomField>
    <fullName>mone__Use_Archive_Bar__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Use Archive Bar</label>
    <type>Checkbox</type>
</CustomField>