sandbox-codebase/objects/mone__Mailchimp_List__c/fields/mone__Visibility__c.field-meta.xml
<CustomField>
    <fullName>mone__Visibility__c</fullName>
    <label>Visibility</label>
    <length>255</length>
    <type>Text</type>
</CustomField>