sandbox-codebase/objects/mone__Mailchimp_List__c/fields/mone__Web_Id__c.field-meta.xml
<CustomField>
    <fullName>mone__Web_Id__c</fullName>
    <label>Web Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>