sandbox-codebase/objects/mone__Mailchimp_List__c/listViews/mone__All.listView-meta.xml
<ListView>
    <fullName>mone__All</fullName>
    <columns>NAME</columns>
    <columns>mone__List_Id__c</columns>
    <columns>mone__Web_Id__c</columns>
    <columns>mone__Name__c</columns>
    <columns>mone__Contact_Company__c</columns>
    <columns>mone__Contact_Address1__c</columns>
    <columns>mone__Contact_Address2__c</columns>
    <columns>mone__Contact_City__c</columns>
    <columns>mone__Contact_State__c</columns>
    <columns>mone__Contact_Zip__c</columns>
    <columns>mone__Contact_Country__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>